--- a/package.json
+++ b/package.json
@@ -18,26 +18,26 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
-    "lucide-react": "^0.454.0",
+    "lucide-react": "^0.468.0",
     "next": "^15.0.4",
     "next-auth": "^4.24.11",
     "prisma": "^6.0.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.28.0",
+    "react-router-dom": "^7.0.2",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^20.17.9",
-    "@types/react": "^18.3.14",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.7.2"
+    "@types/node": "^20.8.0",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "eslint": "^8.50.0",
+    "eslint-config-next": "^13.5.2",
+    "postcss": "^8.4.30",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.2.2"
   }
 }
