--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "@types/node": "^20.8.0",
     "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.50.0",
     "eslint-config-next": "^13.5.2",
-    "postcss": "^8.4.30",
+    "postcss": "^8.4.49",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "tailwindcss": "^3.4.4",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.2.2"
   }
 }
